--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -10,6 +10,7 @@
     "com.unity.ide.vscode": "1.2.5",
     "com.unity.learn.iet-framework": "1.2.3",
     "com.unity.postprocessing": "3.2.0",
+    "com.unity.probuilder": "4.5.2",
     "com.unity.purchasing": "4.1.2",
     "com.unity.test-framework": "1.1.31",
     "com.unity.textmeshpro": "3.0.6",
